# FS25_CreateYourOwnSplashScreen

./: Cargo.toml
.cargo/: config.toml
src/: converter.rs  main.rs
