[package]
name = "FS25_CreateYourOwnSplashScreen"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.33.3", features = ["wgpu"]}
rfd = "0.17.2"
image = "0.25.9"
ddsfile = "0.5.2"
squish = "1.0.0"
dirs = "6.0.0"
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"